# SynaptiScan

./: .gitignore  README.md
backend/: main.py  pyproject.toml  test_inference.py
backend/app/: app.py  init_db.py
backend/app/api/: auth.py  dashboard.py  ingestion.py
backend/app/core/: security.py
backend/app/db/: __init__.py  database.py  models.py  schemas.py
backend/app/ml/: features.py  fusion.py  models.py
backend/app/ml/saved_models/: cognition_features.joblib  cognition_model.joblib  handwriting_features.joblib  handwriting_model.joblib  keystroke_features.joblib  keystroke_model.joblib  mouse_features.joblib  mouse_model.joblib  tremor_features.joblib  tremor_model.joblib  voice_model.joblib
backend/app/ml/training/: train_cognition.py  train_models.py
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.css  App.jsx  index.css
frontend/src/components/tests/: CognitionTest.jsx  HandwritingTest.jsx  KeystrokeTest.jsx  MouseTest.jsx  TremorTest.jsx  VoiceTest.jsx
frontend/src/components/ui/: Accordion.jsx  GuestRoute.jsx  Layout.jsx  ProtectedRoute.jsx
frontend/src/context/: AuthContext.jsx
frontend/src/pages/: Dashboard.jsx  Landing.jsx  Login.jsx  Profile.jsx  Signup.jsx  TestSelect.jsx
frontend/src/services/: api.js
