[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "email-validator>=2.3.0",
    "fastapi>=0.134.0",
    "imageio-ffmpeg>=0.6.0",
    "imbalanced-learn>=0.14.1",
    "joblib>=1.5.3",
    "mediapipe>=0.10.32",
    "numpy>=2.4.2",
    "opencv-python-headless>=4.13.0.92",
    "pandas>=3.0.1",
    "passlib[bcrypt]>=1.7.4",
    "praat-parselmouth>=0.4.7",
    "psycopg2-binary>=2.9.11",
    "pydantic-settings>=2.13.1",
    "pyjwt>=2.11.0",
    "python-dotenv>=1.2.1",
    "python-multipart>=0.0.22",
    "python-speech-features>=0.6",
    "requests>=2.32.5",
    "scikit-learn>=1.8.0",
    "scipy>=1.17.1",
    "sqlalchemy>=2.0.47",
    "torch>=2.10.0",
    "torchaudio>=2.10.0",
    "uvicorn>=0.41.0",
]
